Bug 116322 - Unicode BiDi Strong not holding when entering isolated RTL strings in Calc, e.g. Old Hungarian (10C80 - 10CFF)
Summary: Unicode BiDi Strong not holding when entering isolated RTL strings in Calc, e...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Khaled Hosny
URL:
Whiteboard: target:6.1.0
Keywords:
: 116307 (view as bug list)
Depends on:
Blocks: Font-Rendering RTL
  Show dependency treegraph
 
Reported: 2018-03-09 19:17 UTC by V Stuart Foote
Modified: 2024-08-03 09:15 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
sample Calc sheet showing failure of BiDi lib handling of Strong typed strings entered in cells (2.33 MB, application/vnd.oasis.opendocument.spreadsheet)
2018-03-11 20:28 UTC, V Stuart Foote
Details

Note You need to log in before you can comment on or make changes to this bug.
Description V Stuart Foote 2018-03-09 19:17:32 UTC
Khaled's work on bug 116157 has now improved things for Draw/Impress, in line with earlier Writer. But seems there are still occurrences in Calc when the BiDi Strong alone is not enough to hold isolated strings as RTL.

Example as here for Hungarian text where the Old Hungarian  (10C80 - 10CFF) RTL Rovás script (Székely rovásírás) placename transliterations are being intermixed with LTR Magyar nyelv text. 

But outstanding issue in Calc is that the glyph order while glyphs entered in a mixed stream with other text is correctly as RTL, but when entered it alone into a Calc cell the string is displayed rendered LTR. On selection/editing it correctly displays RTL, but when not selected the text string reverts and displays LTR.

=-ref-=
Bug 116157 resolved usage in Draw/Impress, bug 170204 resolved usage in Writer.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=7a683c31e090e5a81debadcef025df9cd61c75f0
Comment 1 V Stuart Foote 2018-03-09 19:21:21 UTC
s/bug 170204/bug 107204/
Comment 2 V Stuart Foote 2018-03-11 18:50:07 UTC
*** Bug 116307 has been marked as a duplicate of this bug. ***
Comment 3 V Stuart Foote 2018-03-11 20:28:13 UTC
Created attachment 140567 [details]
sample Calc sheet showing failure of BiDi lib handling of Strong typed strings entered in cells

Sorry, forgot to actually add this sample doc when generating this issue per Khaled's request in bug 116157
Comment 4 Commit Notification 2018-03-12 22:06:25 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=489c7088b4a99720d1a2839ed52b3becd7aac342

tdf#116322: Don’t hard-code RTL character ranges

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 V Stuart Foote 2018-03-13 16:11:00 UTC
Verified on Windows 10 Ent 64-bit en-US with
Version: 6.1.0.0.alpha0+ (x64)
Build ID: 4647057a077824cd6782be82b2d13e06fa76704b
CPU threads: 8; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-03-13_02:03:59
Locale: en-US (en_US); Calc: group
Comment 6 Kovács Viktor 2018-03-17 18:50:31 UTC
Version: 6.1.0.0.alpha0+
Build ID: fc86c38e4424f1e098c4422ee28fb0f106ce8558
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: hu-HU (hu_HU.UTF-8); Calc: group
Tested: ready.