tdf#116322: Don’t hard-code RTL character ranges

Calc’s ScOutputData::LayoutStrings() has an optimization that skips edit
engine for what it seems to consider simple enough text (single script,
no bidi controls, etc) and it ends up calling this code in OutputDevice
that hard-codes RTL character ranges and skips bidi algorithm if none is
found. Since the list of RTL characters is not fixed and new version of
Unicode can added new RTL characters, help the next boor soul that will
spend another day debugging this in the future by removing the
hard-coded ranges and always apply the bidi algorithm.

Change-Id: I6eb8fd3d1342a5539d607bf54e9c2de31f5a32b4